# OOP_lab5

./: CMakeLists.txt  README.md  main.cpp
include/: functions.h
src/: functions.cpp
test/: test_figures.cpp
